facts component done

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "jest --verbose",
     "test:watch": "npm run test -- --watch",
     "start": "webpack-dev-server --hot --mode development --devtool eval-source-map",
+    "lint": "eslint .",
+    "pretest": "npm run lint",
     "build": "webpack -p"
   },
   "jest": {
