--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "update": "^0.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
@@ -52,7 +53,7 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.1.0",
+    "jest": "^24.3.0",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.1",
     "prop-types": "^15.7.2",
